<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/friendsItemTxtName"
        style="@style/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/friendsItemTxtEmail"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/email_example"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsItemTxtName" />

    <TextView
        android:id="@+id/friendsItemTxtMovieMatches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/movie_matches"
        app:layout_constraintBottom_toTopOf="@+id/friendsItemTxtEmail"
        app:layout_constraintStart_toEndOf="@+id/friendsItemTxtName"
        app:layout_constraintTop_toTopOf="@+id/friendsItemTxtName" />

    <TextView
        android:id="@+id/friendsItemTxtSeriesMatches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/series_matches"
        app:layout_constraintBottom_toBottomOf="@+id/friendsItemTxtEmail"
        app:layout_constraintStart_toEndOf="@+id/friendsItemTxtName"
        app:layout_constraintTop_toTopOf="@+id/friendsItemTxtEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/friendsItemTxtMovieMatchesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        android:text="@string/matches_val_example"
        app:layout_constraintBottom_toBottomOf="@+id/friendsItemTxtMovieMatches"
        app:layout_constraintStart_toEndOf="@+id/friendsItemTxtMovieMatches"
        app:layout_constraintTop_toTopOf="@+id/friendsItemTxtMovieMatches" />

    <TextView
        android:id="@+id/friendsItemTxtSeriesMatchesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/matches_val_example"
        app:layout_constraintBottom_toBottomOf="@+id/friendsItemTxtSeriesMatches"
        app:layout_constraintStart_toEndOf="@+id/friendsItemTxtSeriesMatches"
        app:layout_constraintTop_toTopOf="@+id/friendsItemTxtSeriesMatches" />

</androidx.constraintlayout.widget.ConstraintLayout>